<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.joju.client.SigninActivity">

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:id="@+id/enter"
        android:layout_centerHorizontal="true"
        />

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:hint="@string/id"
        android:id="@+id/IDInput"
        android:layout_centerVertical="true" />

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:hint="@string/name"
        android:layout_below="@id/IDInput"
        android:id="@+id/NameInput"
        android:layout_centerVertical="true" />

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:hint="@string/password"
        android:id="@+id/PasswordInput"
        android:layout_below="@id/NameInput"
        android:password="true" />

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:hint="@string/password_again"
        android:id="@+id/PasswordInput2"
        android:layout_below="@id/PasswordInput"
        android:password="true" />



</RelativeLayout>
